runs/live-helm-confighub-compare/istio-istiod-default/namespace-apply.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default-apply
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
spec: {}
status: {}
