runs/live-helm-confighub-compare/istio-istiod-default/namespace-oci.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default-oci
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
spec: {}
status: {}
